--- a/results/03_augment.html
+++ b/results/03_augment.html
@@ -1162,6 +1162,9 @@ margin-right: 0; }
 <section id="adding-stage-groups" class="slide level2">
 <h2>Adding stage groups</h2>
 </section>
+<section id="creating-subset-of-data" class="slide level2">
+<h2>Creating subset of data</h2>
+</section>
 <section id="saving-data" class="slide level2">
 <h2>Saving data</h2>
 <div class="footer footer-default">
